--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-  <script src="/static/bundle.js"></script>
+  <script src="bundle.js"></script>
 
 </body>
 
